--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,27 +51,28 @@ span {
 .img__holder > img {
   width: 100%;
 }
-#img_1 {
-  width: 64.43vw; /* 1237px */
-  left: 21.77vw; /* 418px */
-  bottom: 5.36vw; /* 103px */
+
+.page-title {
+  text-transform: uppercase;
+  color: #004062;
+  font-family: 'Roboto-900';
 }
-#img_2 {
-  width: 67.39vw; /* 1294px */
-  left: 30.16vw; /* 579px */
-  bottom: 1.15vw; /* 22px */
+
+.page-subtitle {
+  position: relative;
+  text-transform: uppercase;
 }
-#img_3 {
-  width: 44.54vw; /* 857px */
-  left: 26.82vw; /* 515px */
-  bottom: 5.10vw; /* 98px */
+.page-subtitle:after {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background-color: #303030;
 }
-#img_4 {
-  width: 50vw; /* 960px */
-  left: 25.57vw; /* 491px */
-  bottom: 2.4vw; /* 46px */
-}
-.widget--tab {
+
+.tab {
   width: 100%;
   padding: 5px;
   background-color: #c4c4c4;
