--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,6 +34,10 @@ span {
   text-transform: uppercase;
 }
 
+.wrapper {
+  padding: 0 12.95vw;
+}
+
 /* Картинки */
 .img__holder {
   position: absolute;
@@ -74,8 +78,8 @@ span {
 
 .tab {
   width: 100%;
-  padding: 5px;
-  background-color: #c4c4c4;
+  /* padding: 5px;
+  background-color: #c4c4c4; */
 }
 
 .tab__titles {
